mldonkey: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71079 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/mldonkey/Portfile
+++ b/dports/net/mldonkey/Portfile
@@ -1,57 +1,63 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name			mldonkey
+name                mldonkey
 version             3.0.4
-categories		net
-maintainers		nomaintainer
-description		OCaml/GTK client for the eDonkey p2p network
-long_description	\
-				MLdonkey is a multi-platform multi-network peer-to-peer \
-				client. It supports several large networks, such as eDonkey, Overnet, Bittorrent, Gnutella (Bearshare, Limewire, etc), \
-				Gnutella2 (Shareaza), Fasttrack (Kazaa, Imesh, Grobster), \
-				Soulseek, Direct-Connect, and Opennap. Networks can be \
-				enabled/disabled, searches are performed in parallel on all \
-				enabled networks, but each file is only downloaded from one \
-				network, but from multiple clients concurrently.
-homepage		http://mldonkey.sourceforge.net/
-platforms		darwin
-master_sites	sourceforge
+categories          net
+platforms           darwin
+maintainers         nomaintainer
+
+description         OCaml/GTK client for the eDonkey p2p network
+
+long_description    MLdonkey is a multi-platform multi-network peer-to-peer \
+                    client. It supports several large networks, such as \
+                    eDonkey, Overnet, Bittorrent, Gnutella (Bearshare, \
+                    Limewire, etc), Gnutella2 (Shareaza), Fasttrack (Kazaa, \
+                    Imesh, Grobster), Soulseek, Direct-Connect, and Opennap. \
+                    Networks can be enabled/disabled, searches are performed \
+                    in parallel on all enabled networks, but each file is \
+                    only downloaded from one network, but from multiple \
+                    clients concurrently.
+
+homepage            http://mldonkey.sourceforge.net/
+master_sites        sourceforge
+use_bzip2           yes
 
 checksums           md5     06a084874dfd99dbad4dabc21e986354 \
                     sha1    8d9e32acdc4cda1a7ff0f09e06c76cd589691d3f \
                     rmd160  e98e3319ed6099af0fb226402547e4407114c074
 
+depends_lib         port:ocaml \
+                    port:lablgtk2 \
+                    port:expat \
+                    port:bzip2 \
+                    port:file \
+                    port:fontconfig \
+                    port:freetype \
+                    port:gd2 \
+                    port:jpeg \
+                    port:libiconv \
+                    port:libpng
+
 patchfiles          patch-gui-guiHtml.diff \
                     patch-gui-guiOptions.diff
 
 # ocaml is not universal
-universal_variant no
+universal_variant   no
 
 pre-configure {
-	if {![file exists ${prefix}/lib/ocaml/lablgtk2/lablrsvg.a]} {
-		ui_error "${name} needs lablgtk2 to be installed with librsvg support."
-		ui_error "Please rebuild lablgtk2 using the command:"
-		ui_error ""
-		ui_error "    sudo port upgrade --enforce-variants lablgtk2 +rsvg"
-		ui_error ""
-		return -code error "incompatible lablgtk2 installation"
-	}
+    if {![file exists ${prefix}/lib/ocaml/lablgtk2/lablrsvg.a]} {
+        ui_error "${name} needs lablgtk2 to be installed with librsvg support."
+        ui_error "Please rebuild lablgtk2 using the command:"
+        ui_error ""
+        ui_error "    sudo port upgrade --enforce-variants lablgtk2 +rsvg"
+        ui_error ""
+        return -code error "incompatible lablgtk2 installation"
+    }
 }
 
-configure.args	--enable-gui=newgui2
+configure.args      --enable-gui=newgui2
 
-use_bzip2		yes
-depends_lib		port:ocaml \
-				port:lablgtk2 \
-				port:expat \
-				port:bzip2 \
-				port:file \
-				port:fontconfig \
-				port:freetype \
-				port:gd2 \
-				port:jpeg \
-				port:libiconv \
-				port:libpng
-configure.cc	gcc
+configure.cc        gcc
