--- a/dports/gnome/libgtkhtml3/Portfile
+++ b/dports/gnome/libgtkhtml3/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 
 name            libgtkhtml3
 set my_name     gtkhtml
-version         3.30.1
+version         3.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 
 maintainers     nomaintainer
@@ -23,21 +23,20 @@ master_sites    gnome:sources/${my_name}/${branch}/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     f858b359511f1e1437ad826f4ce0eda9 \
-                sha1    e72ace1cf3461d3b01746e7ebcfef6e94124103b \
-                rmd160  e47734cf521bfe20ebd340162769b8c372f453e9
+checksums       md5     0d11cebd0f1fe25435ab00d7cd26df7b \
+                sha1    5cd57e2fb1c4fadd8e4dd5ae1734c81360cadd8e \
+                rmd160  9d569dafbb6eca376afc47cbad0ad11e1193033b
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
-                port:gnome-icon-theme \
-                port:iso-codes
+                port:gnome-icon-theme
 
 depends_lib     port:libsoup \
                 port:enchant \
-                port:jpeg \
+                port:iso-codes \
                 port:gconf \
-                port:libgnomeui
+                port:orbit2 \
+                port:gnuregex
 
 depends_run     port:gnome-icon-theme
 
