install missing config files and point config path to prefix (closes #25556)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71082 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/pastebinit/Portfile
+++ b/dports/net/pastebinit/Portfile
@@ -29,7 +29,9 @@ set localedir       ${prefix}/share/locale/
 depends_lib-append  port:py26-configobj
 
 post-patch {
+    # Fix paths
     reinplace "s|^#!/usr/bin/python|#!${prefix}/bin/python2.6|" ${worksrcpath}/pastebinit
+    reinplace "s|/etc/pastebin.d|${prefix}/etc/pastebin.d|" ${worksrcpath}/pastebinit
 }
 
 build {
@@ -38,7 +40,8 @@ build {
 
 destroot {
     xinstall -m 755 ${worksrcpath}/pastebinit ${destroot}${prefix}/bin
-    
+    file copy ${worksrcpath}/pastebin.d ${destroot}${prefix}/etc/pastebin.d
+
     # Localization
     xinstall -m 755 -d ${destroot}${localedir}
     foreach f  [glob ${worksrcpath}/po/mo/*] {
