--- a/dports/net/pastebinit/Portfile
+++ b/dports/net/pastebinit/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                pastebinit
 version             1.1
+revision            1
 maintainers         mnick
 
 categories          net python
