--- a/dports/x11/xsel/Portfile
+++ b/dports/x11/xsel/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem              1.0
@@ -12,22 +13,18 @@ maintainers             ryandesign
 homepage                http://www.kfish.org/software/xsel/
 master_sites            ${homepage}download/
 
-description \
-    command-line program for getting and setting the contents of the \
-    X selection
+description             command-line program for getting and setting the \
+                        contents of the X selection
 
-long_description \
-    XSel is a ${description}. Normally this is only accessible by \
-    manually highlighting information and pasting it with the middle \
-    mouse button.
+long_description        XSel is a ${description}. Normally this is only \
+                        accessible by manually highlighting information and \
+                        pasting it with the middle mouse button.
 
-checksums \
-    md5     75983f143ce83dc259796c6eaf85c8f5 \
-    sha1    e48df89d7ce7e1256b0c7464393533a0c296eca1 \
-    rmd160  53fc7fe06e4e4ebe3c47a3a97408876cd0c5faed
+checksums               md5     75983f143ce83dc259796c6eaf85c8f5 \
+                        sha1    e48df89d7ce7e1256b0c7464393533a0c296eca1 \
+                        rmd160  53fc7fe06e4e4ebe3c47a3a97408876cd0c5faed
 
-depends_lib \
-	port:xorg-libX11
+depends_lib             port:xorg-libX11
 
 livecheck.type          regex
 livecheck.url           [lindex ${master_sites} 0]?M=D
