xsel: simplify livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71085 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xsel/Portfile
+++ b/dports/x11/xsel/Portfile
@@ -27,5 +27,5 @@ checksums               md5     75983f143ce83dc259796c6eaf85c8f5 \
 depends_lib             port:xorg-libX11
 
 livecheck.type          regex
-livecheck.url           [lindex ${master_sites} 0]?M=D
+livecheck.url           [lindex ${master_sites} 0]
 livecheck.regex         ${name}-(\[0-9.\]+)\\.tar
