xsel: also install documentation files
git-svn-id: https://svn.macports.org/repository/macports/trunk@71086 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xsel/Portfile
+++ b/dports/x11/xsel/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 
 name                    xsel
 version                 1.2.0
-revision                1
+revision                2
 categories              x11
 platforms               darwin
 maintainers             ryandesign
@@ -25,6 +25,17 @@ checksums               md5     75983f143ce83dc259796c6eaf85c8f5 \
                         rmd160  53fc7fe06e4e4ebe3c47a3a97408876cd0c5faed
 
 depends_lib             port:xorg-libX11
+
+post-destroot {
+    set docdir ${destroot}${prefix}/share/doc/${name}
+    xinstall -d ${docdir}
+    xinstall -m 644 -W ${worksrcpath} \
+        AUTHORS \
+        COPYING \
+        ChangeLog \
+        README \
+        ${docdir}
+}
 
 livecheck.type          regex
 livecheck.url           [lindex ${master_sites} 0]
