expat: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71087 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/expat/Portfile
+++ b/dports/textproc/expat/Portfile
@@ -1,27 +1,32 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
+
 name                expat
 version             2.0.1
 categories          textproc devel
+platforms           darwin freebsd
 maintainers         ryandesign
 license             MIT
+
 description         XML 1.0 parser written in C
+
 long_description    Expat is an XML parser library written in C. It is a \
-                        stream-oriented parser in which an application \
-                        registers handlers for things the parser might find \
-                        in the XML document (like start tags). 
-platforms           darwin freebsd
+                    stream-oriented parser in which an application \
+                    registers handlers for things the parser might find \
+                    in the XML document (like start tags).
+                    
 homepage            http://expat.sourceforge.net/
 master_sites        sourceforge
-use_parallel_build  yes
 
-checksums \
-	md5 ee8b492592568805593f81f8cdf2a04c \
-	sha1 663548c37b996082db1f2f2c32af060d7aa15c2d \
-	rmd160 d31bcb152adaff9e358968be1ea901e1b4ed3b2f
+checksums           md5     ee8b492592568805593f81f8cdf2a04c \
+                    sha1    663548c37b996082db1f2f2c32af060d7aa15c2d \
+                    rmd160  d31bcb152adaff9e358968be1ea901e1b4ed3b2f
 
 configure.args      --mandir=${prefix}/share/man
+
+use_parallel_build  yes
 build.type          gnu
 
 set docdir          ${prefix}/share/doc/${name}-${version}
@@ -29,7 +34,7 @@ set docdir          ${prefix}/share/doc/${name}-${version}
 pre-test {
     copy -force ${worksrcpath}/lib/expat.h ${worksrcpath}/lib/expat_external.h ${worksrcpath}/tests
 }
-# extract from tests/README.txt: "Expat must be built and installed 
+# extract from tests/README.txt: "Expat must be built and installed
 # before "make check" can be executed."
 test.run            yes
 test.target         check
@@ -38,7 +43,7 @@ post-destroot {
     xinstall -m 0755 -d ${destroot}${docdir}/html
     xinstall -m 0644 -W ${worksrcpath} COPYING Changes README ${destroot}${docdir}
     eval xinstall -m 0644 [glob ${worksrcpath}/doc/*] ${destroot}${docdir}/html
-
+    
     system "cd ${destroot}${prefix}/lib &&
     ln -s libexpat.1.dylib libexpat.0.dylib"
 }
