--- a/dports/textproc/expat/Portfile
+++ b/dports/textproc/expat/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                expat
 version             2.0.1
+revision            1
 categories          textproc devel
 platforms           darwin freebsd
 maintainers         ryandesign
@@ -29,8 +30,6 @@ configure.args      --mandir=${prefix}/share/man
 use_parallel_build  yes
 build.type          gnu
 
-set docdir          ${prefix}/share/doc/${name}-${version}
-
 pre-test {
     copy -force ${worksrcpath}/lib/expat.h ${worksrcpath}/lib/expat_external.h ${worksrcpath}/tests
 }
@@ -40,21 +39,18 @@ test.run            yes
 test.target         check
 
 post-destroot {
-    xinstall -m 0755 -d ${destroot}${docdir}/html
-    xinstall -m 0644 -W ${worksrcpath} COPYING Changes README ${destroot}${docdir}
-    eval xinstall -m 0644 [glob ${worksrcpath}/doc/*] ${destroot}${docdir}/html
+    set docdir ${destroot}${prefix}/share/doc/${name}
+    set examplesdir ${destroot}${prefix}/share/examples/${name}
+    xinstall -m 0755 -d ${examplesdir} ${docdir}/html
+    
+    xinstall -m 0644 -W ${worksrcpath} COPYING Changes README ${docdir}
+    eval xinstall -m 0644 [glob ${worksrcpath}/doc/*] ${docdir}/html
+    
+    xinstall -m 0644 -W ${worksrcpath}/examples elements.c outline.c \
+        ${examplesdir}
     
     system "cd ${destroot}${prefix}/lib &&
     ln -s libexpat.1.dylib libexpat.0.dylib"
-}
-
-variant examples description {Install examples} {
-    post-destroot {
-        set examplesdir ${docdir}/examples
-        xinstall -m 0755 -d ${destroot}${examplesdir}
-        xinstall -m 0644 -W ${worksrcpath}/examples elements.c outline.c \
-            ${destroot}${examplesdir}
-    }
 }
 
 livecheck.type      sourceforge
