expat: don't use system to create a symlink
git-svn-id: https://svn.macports.org/repository/macports/trunk@71089 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/expat/Portfile
+++ b/dports/textproc/expat/Portfile
@@ -49,8 +49,7 @@ post-destroot {
     xinstall -m 0644 -W ${worksrcpath}/examples elements.c outline.c \
         ${examplesdir}
     
-    system "cd ${destroot}${prefix}/lib &&
-    ln -s libexpat.1.dylib libexpat.0.dylib"
+    ln -s libexpat.1.dylib ${destroot}${prefix}/lib/libexpat.0.dylib
 }
 
 livecheck.type      sourceforge
