libmcrypt: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71091 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libmcrypt/Portfile
+++ b/dports/devel/libmcrypt/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
@@ -6,31 +7,27 @@ name                libmcrypt
 version             2.5.8
 revision            1
 categories          devel security
-maintainers         ryandesign openmaintainer
-homepage            http://mcrypt.sourceforge.net/
-use_bzip2           yes
-use_parallel_build  yes
 platforms           darwin
+maintainers         ryandesign openmaintainer
+use_bzip2           yes
 
-description \
-	The encryption library used by mcrypt
+description         The encryption library used by mcrypt
 
-long_description \
-	libmcrypt is the library which implements all the \
-	algorithms and modes found in mcrypt.
+long_description    libmcrypt is the library which implements all the \
+                    algorithms and modes found in mcrypt.
 
-master_sites \
-	sourceforge:mcrypt \
-	freebsd
+homepage            http://mcrypt.sourceforge.net/
+master_sites        sourceforge:mcrypt \
+                    freebsd
 
-checksums \
-	md5 c4f491dd411a09e9de3b8702ea6f73eb \
-	sha1 b4d4d8851db543e6fda80572a54a4901b4e767da \
-	rmd160 4dba23286aa00d88a7f6763629bb3cde7dd2fe6b
+checksums           md5     c4f491dd411a09e9de3b8702ea6f73eb \
+                    sha1    b4d4d8851db543e6fda80572a54a4901b4e767da \
+                    rmd160  4dba23286aa00d88a7f6763629bb3cde7dd2fe6b
 
-configure.args \
-	--disable-posix-threads \
-	--mandir=${prefix}/share/man \
-	--enable-static
+configure.args      --disable-posix-threads \
+                    --mandir=${prefix}/share/man \
+                    --enable-static
+
+use_parallel_build  yes
 
 livecheck.distname  Libmcrypt
