--- a/dports/devel/libssh01/Portfile
+++ b/dports/devel/libssh01/Portfile
@@ -1,33 +1,38 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
 
-name		libssh01
-version		0.11
-revision        1
-categories	devel security net
-platforms	darwin
-maintainers	ryandesign openmaintainer
-description	an SSH library
-long_description	The ssh library was designed to be used by \
-			programmers needing a working SSH implementation \
-			by the mean of a library.
-license		LGPLv2.1
+name                    libssh01
+version                 0.11
+revision                1
+categories              devel security net
+platforms               darwin
+maintainers             ryandesign openmaintainer
+license                 LGPLv2.1
 
-homepage	http://0xbadc0de.be/wiki/libssh:libssh
-master_sites	http://www.0xbadc0de.be/libssh
-extract.suffix	.tgz
-distname	libssh-${version}
-checksums	md5 ad703c4702646c83ca4fcace92c220d3 \
-		sha1 307430249ded90332c4ec77a264913b3bc93a648 \
-		rmd160 69c2cc00becb84a62555fe884345398f155815a4
+description             an SSH library
 
-depends_lib	port:openssl port:zlib
+long_description        The ssh library was designed to be used by \
+                        programmers needing a working SSH implementation \
+                        by the mean of a library.
 
-patchfiles	patch-Makefile.in.diff \
-		patch-libssh-Makefile.in.diff \
-		patch-sample.c.diff
+homepage                http://0xbadc0de.be/wiki/libssh:libssh
+master_sites            http://www.0xbadc0de.be/libssh
+extract.suffix          .tgz
+distname                libssh-${version}
 
-configure.args	--libdir=${prefix}/lib/${name}
+checksums               md5     ad703c4702646c83ca4fcace92c220d3 \
+                        sha1    307430249ded90332c4ec77a264913b3bc93a648 \
+                        rmd160  69c2cc00becb84a62555fe884345398f155815a4
 
-livecheck.type	none
+depends_lib             port:openssl \
+                        port:zlib
+
+patchfiles              patch-Makefile.in.diff \
+                        patch-libssh-Makefile.in.diff \
+                        patch-sample.c.diff
+
+configure.args          --libdir=${prefix}/lib/${name}
+
+livecheck.type          none
