ngircd: add gnutls and openssl variants (#26297), make openssl the default
git-svn-id: https://svn.macports.org/repository/macports/trunk@71093 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/ngircd/Portfile
+++ b/dports/irc/ngircd/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 name            ngircd
 version         14.1
+revision        1
 categories      irc
 maintainers     nomaintainer
 description     next generation IRC daemon
@@ -29,4 +30,18 @@ configure.args  --mandir=${prefix}/share/man \
 
 pre-configure {
     reinplace s|600|644|g ${worksrcpath}/doc/Makefile.in
+}
+
+variant gnutls conflicts openssl description {Build with GnuTLS} {
+    configure.args-append   --with-gnutls
+    depends_lib-append      port:gnutls
+}
+
+variant openssl conflicts gnutls description {Build with OpenSSL} {
+    configure.args-append   --with-openssl
+    depends_lib-append      port:openssl
+}
+
+if {![variant_isset gnutls]} {
+    default_variants        +openssl
 }
