ngircd: disable universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71095 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/ngircd/Portfile
+++ b/dports/irc/ngircd/Portfile
@@ -23,6 +23,9 @@ checksums       md5     8c9e0382cd982b0ca77c05528ebe28eb \
 
 depends_lib     port:libident
 
+# configure: error: Can't enable IDENT support!
+universal_variant no
+
 configure.args  --mandir=${prefix}/share/man \
                 --enable-ipv6 \
                 --with-tcp-wrappers \
