ngircd: turn a reinplace into a patchfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@71097 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/ngircd/Portfile
+++ b/dports/irc/ngircd/Portfile
@@ -26,15 +26,13 @@ depends_lib     port:libident
 # libident is not universal
 universal_variant no
 
+patchfiles      patch-doc-Makefile.in.diff
+
 configure.args  --mandir=${prefix}/share/man \
                 --enable-ipv6 \
                 --with-tcp-wrappers \
                 --with-zeroconf \
                 --with-ident
-
-pre-configure {
-    reinplace s|600|644|g ${worksrcpath}/doc/Makefile.in
-}
 
 variant gnutls conflicts openssl description {Build with GnuTLS} {
     configure.args-append   --with-gnutls
