ngircd: don't clobber the user's conf file
git-svn-id: https://svn.macports.org/repository/macports/trunk@71098 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/ngircd/Portfile
+++ b/dports/irc/ngircd/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            ngircd
 version         16
+revision        1
 categories      irc
 maintainers     nomaintainer
 description     next generation IRC daemon
