cronolog: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71099 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/cronolog/Portfile
+++ b/dports/sysutils/cronolog/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
@@ -8,28 +9,26 @@ categories          sysutils
 platforms           darwin
 maintainers         ryandesign
 license             GPLv2
+
+description         cronolog is a web log rotation program
+
+long_description    cronolog is a simple filter program that reads log file \
+                    entries from standard input and writes each entry to the \
+                    output file specified by a filename template and the \
+                    current date and time. When the expanded filename \
+                    changes, the current file is closed and a new one opened.
+
 homepage            http://cronolog.org/
 master_sites        ${homepage}download/
+
+checksums           md5 a44564fd5a5b061a5691b9a837d04979 \
+                    sha1 6422b7c5e87241eb31d76809a2e0eea77ae4c64e \
+                    rmd160 6181c14e69a419c633950274c3c112f6bd784f9e
+
+configure.args      --mandir=${prefix}/share/man \
+                    --infodir=${prefix}/share/info
+
 use_parallel_build  yes
-
-description \
-	cronolog is a web log rotation program
-
-long_description \
-	cronolog is a simple filter program that reads log file \
-	entries from standard input and writes each entry to the \
-	output file specified by a filename template and the current \
-	date and time. When the expanded filename changes, the \
-	current file is closed and a new one opened.
-
-checksums \
-	md5 a44564fd5a5b061a5691b9a837d04979 \
-	sha1 6422b7c5e87241eb31d76809a2e0eea77ae4c64e \
-	rmd160 6181c14e69a419c633950274c3c112f6bd784f9e
-
-configure.args \
-	--mandir=${prefix}/share/man \
-	--infodir=${prefix}/share/info
 
 livecheck.type      regex
 livecheck.url       ${homepage}download/index.html
