--- a/dports/sysutils/cronolog/Portfile
+++ b/dports/sysutils/cronolog/Portfile
@@ -4,6 +4,7 @@
 PortSystem          1.0
 
 name                cronolog
+conflicts           cronolog-devel
 version             1.6.2
 categories          sysutils
 platforms           darwin
