tidy: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71101 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/tidy/Portfile
+++ b/dports/www/tidy/Portfile
@@ -1,41 +1,38 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem          1.0
+PortSystem              1.0
 
-name                tidy
-version             20090325
-license             MIT
-categories          www
-maintainers         ryandesign
-homepage            http://tidy.sourceforge.net/
-platforms           darwin
-use_bzip2           yes
-use_parallel_build  yes
+name                    tidy
+version                 20090325
+categories              www
+platforms               darwin
+maintainers             ryandesign
+license                 MIT
 
-description \
-	Fixes and tidies up HTML files
+description             Fixes and tidies up HTML files
 
-long_description \
-	Tidy is a utility to clean up and fix broken HTML files.
+long_description        Tidy is a utility to clean up and fix broken HTML files.
 
-master_sites \
-	gentoo
+homepage                http://tidy.sourceforge.net/
+master_sites            gentoo
+use_bzip2               yes
 
-checksums \
-	md5     39a05125a2a2dbacaccac84af64e1dbc \
-	sha1    28c000a2cd40262fc0d7c2c429eb2a09b2df7bf4 \
-	rmd160  796a025bc1b67ea64394c64a1455a582e9285982
+checksums               md5     39a05125a2a2dbacaccac84af64e1dbc \
+                        sha1    28c000a2cd40262fc0d7c2c429eb2a09b2df7bf4 \
+                        rmd160  796a025bc1b67ea64394c64a1455a582e9285982
 
-depends_build \
-    port:autoconf \
-    port:automake \
-	port:libtool
+depends_build           port:autoconf \
+                        port:automake \
+                        port:libtool
 
 pre-configure {
-	system "cd ${worksrcpath} && /bin/sh ${worksrcpath}/build/gnuauto/setup.sh"
+    system "cd ${worksrcpath} && /bin/sh ${worksrcpath}/build/gnuauto/setup.sh"
 }
 
-livecheck.type      regex
-livecheck.url       http://tidy.cvs.sourceforge.net/viewvc/*checkout*/tidy/tidy/src/version.h
-livecheck.regex     {"(.+)"}
+use_parallel_build      yes
+
+livecheck.type          regex
+livecheck.url           http://tidy.cvs.sourceforge.net/viewvc/*checkout*/tidy/tidy/src/version.h
+livecheck.regex         {"(.+)"}
 eval livecheck.version  [clock format [clock scan ${version}] -format {%d %B %Y}]
