Ghostscript 9.00rc1  - http://permalink.gmane.org/gmane.comp.printing.ghostscript.devel/3242  - http://permalink.gmane.org/gmane.comp.printing.ghostscript.devel/3240
git-svn-id: https://svn.macports.org/repository/macports/trunk@71102 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript-fonts-hiragino/Portfile
+++ b/dports/print/ghostscript-fonts-hiragino/Portfile
@@ -3,13 +3,14 @@
 PortSystem      1.0
 
 name            ghostscript-fonts-hiragino
-version         8.71
+version         9.00
 categories      print japanese chinese
 maintainers     takanori openmaintainer
 description     Hiragino font for ghostscript ${version}
 long_description \
                 ${description}
 platforms       macosx
+supported_archs noarch
 homepage
 master_sites
 distfiles
