--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -4,8 +4,8 @@ PortSystem      1.0
 PortGroup       muniversal 1.0
 
 name            ghostscript
-version         8.71
-revision        5
+version         9.00
+set version_sub rc1
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -15,21 +15,17 @@ long_description \
                 supports many different printers and some displays.
 platforms       darwin
 homepage        http://www.cs.wisc.edu/~ghost/
-master_sites    sourceforge:${name}:source \
+master_sites    http://ghostscript.com/~chrisl/:source \
                 sourceforge:gs-fonts:fonts \
                 macports:pTeX:misc
-distfiles       ${distname}.tar.gz:source \
+#               sourceforge:${name}:source
+distfiles       ${distname}${version_sub}.tar.gz:source \
                 ghostscript-fonts-other-6.0.tar.gz:fonts \
                 mappingresources4pdf_2unicode-20091208.tar.Z:misc \
                 mappingresources4pdf_other-20091208.tar.Z:misc
 patchfiles      patch-base_unix-dll.mak.diff \
-                patch-base_stdpre.h.diff \
-                libpng14-compat.diff \
-                patch-psi_zfile.c.diff \
-                patch-Makefile.in.diff \
-                patch-doc_Use.htm.diff \
-                patch-base_gsfcmap.c.diff
-checksums       ${distname}.tar.gz rmd160 efce74cf22cf99b2b1a145df466e79a86e3dfefb \
+                patch-base_stdpre.h.diff
+checksums       ${distname}${version_sub}.tar.gz rmd160 5ed89f680b7f5faa2b5fe207a87ee62a41a79581 \
                 ghostscript-fonts-other-6.0.tar.gz rmd160 ab60dbf71e7d91283a106c3df381cadfe173082f \
                 mappingresources4pdf_2unicode-20091208.tar.Z rmd160 bc1b86e6a5f0e022f88070195eb3e01e167114a7 \
                 mappingresources4pdf_other-20091208.tar.Z    rmd160 1e2ea9af6be8b60c9a54963e542fa06ceb2daccd
@@ -77,18 +73,10 @@ autoreconf.args -fv
 configure.cppflags-delete       "-I${prefix}/include"
 configure.cppflags-append       "-isystem${prefix}/include"
 
-# gs8.71: The default optimization flag (-O2) causes pdfwrite's strange 'Memory fault' problem.
-#         See also: http://bugs.ghostscript.com/show_bug.cgi?id=691005
-configure.optflags  -Os
-
 configure.args  --disable-compile-inits \
                 --disable-cups \
-                --disable-gtk
-
-pre-configure {
-    # rebuild jbig2dec/configure manually
-    system "cd ${worksrcpath}/jbig2dec && autoreconf ${autoreconf.pre_args} ${autoreconf.args}"
-}
+                --disable-gtk \
+                --with-system-libtiff
 
 build.target        so
 use_parallel_build  no
