openjdk6: use build.jobs (#26301)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71104 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/openjdk6/Portfile
+++ b/dports/java/openjdk6/Portfile
@@ -129,7 +129,7 @@ build.args \
     ALT_DEVTOOLS_PATH=/usr \
     ALT_CACERTS_FILE=/System/Library/Frameworks/JavaVM.framework/Home/lib/security/cacerts \
     NO_DOCS=true \
-    HOTSPOT_BUILD_JOBS=[expr [exec sysctl -n hw.ncpu] - 1]
+    HOTSPOT_BUILD_JOBS=${build.jobs}
 
 destroot {
     set path "${destroot}${prefix}/share/java/${name}/"
