--- a/dports/devel/libssh/Portfile
+++ b/dports/devel/libssh/Portfile
@@ -1,25 +1,30 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
 
-name		libssh
-version		0.2
-revision        1
-epoch		1
-categories	devel security net
-platforms	darwin
-maintainers	oneinsane.net:ron
-description	an SSH library
-long_description	The ssh library was designed to be used by \
-			programmers needing a working SSH implementation \
-			by the mean of a library.
-license		LGPLv2.1
+name                    libssh
+epoch                   1
+version                 0.2
+revision                1
+categories              devel security net
+platforms               darwin
+maintainers             oneinsane.net:ron
+license                 LGPLv2.1
 
-homepage	http://0xbadc0de.be/wiki/libssh:libssh
-master_sites	http://www.0xbadc0de.be/libssh
-extract.suffix	.tgz
-checksums	md5 8a76c03579a3e27046e6bafe88ffd171 \
-		sha1 bde7652da5a0f79127c3d5e4b9383d3a07619344 \
-		rmd160 29b5d109f7962daa1f5e38197ff75b9603a39873
+description             an SSH library
 
-depends_lib	port:openssl port:zlib
+long_description        The ssh library was designed to be used by \
+                        programmers needing a working SSH implementation \
+                        by the mean of a library.
+
+homepage                http://0xbadc0de.be/wiki/libssh:libssh
+master_sites            http://www.0xbadc0de.be/libssh
+extract.suffix          .tgz
+
+checksums               md5     8a76c03579a3e27046e6bafe88ffd171 \
+                        sha1    bde7652da5a0f79127c3d5e4b9383d3a07619344 \
+                        rmd160  29b5d109f7962daa1f5e38197ff75b9603a39873
+
+depends_lib             port:openssl \
+                        port:zlib
