libssh: take over maintainership; see #26304
git-svn-id: https://svn.macports.org/repository/macports/trunk@71106 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libssh/Portfile
+++ b/dports/devel/libssh/Portfile
@@ -9,7 +9,7 @@ version                 0.2
 revision                1
 categories              devel security net
 platforms               darwin
-maintainers             oneinsane.net:ron
+maintainers             ryandesign openmaintainer
 license                 LGPLv2.1
 
 description             an SSH library
