file-roller: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71107 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/file-roller/Portfile
+++ b/dports/gnome/file-roller/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		file-roller
-version		2.26.3
+version		2.30.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	An archive manager for GNOME
 long_description        File Roller is an archive manager for the GNOME \
@@ -19,25 +19,28 @@ platforms	darwin
 homepage	http://fileroller.sourceforge.net/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     1876e9807a12c37f9bb2d00807905755 \
-                sha1    92760312c9dddec695851170c289f692c2521176 \
-                rmd160  4c8cb579c4849a6cdc92250df5b447f575be76a6
-
-patchfiles      patch-src-fr-enum-types.c.diff
+checksums       md5     c13209518d2e2294ec1fa813e063b0c5 \
+                sha1    994ed5d930c4c012004c1c598904335905eea239 \
+                rmd160  580bbf929b75835627475dbda69f9872e43c3eb2
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils
 
-depends_lib     port:gconf \
-	        port:nautilus
+depends_lib     port:nautilus
 
 use_bzip2 	yes
 
 configure.args  --mandir=${prefix}/share/man \
+                --disable-packagekit \
                 --disable-schemas-install \
                 --disable-scrollkeeper
+
+#
+# nautilus is not universal
+#
+
+universal_variant no
 
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
