Switch to no maintainer per email with old maintainer. Change python variant to use python26. (#26313)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71108 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/xapian-bindings/Portfile
+++ b/dports/devel/xapian-bindings/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 name                xapian-bindings
 version             1.0.15
 categories          devel
-maintainers         m@loonsoft.com
+maintainers         nomaintainer
 description         Xapian bindings
 long_description    Xapian is a highly adaptable toolkit which allows developers to easily add advanced indexing and search facilities to their own applications. It supports the Probabilistic Information Retrieval model and also supports a rich set of boolean query operators.
 
@@ -28,11 +28,11 @@ variant     php description {builds php bindings} {
                     configure.args-append  --with-php
                     depends_lib-append path:bin/php:php5
                 }
-variant     python description {builds python bindings} {
+variant     python26 description {builds python bindings} {
                     configure.args-delete  --without-python
                     configure.args-append  --with-python
-                    configure.env-append PYTHON=${prefix}/bin/python2.5
-                    depends_lib-append port:python25
+                    configure.env-append PYTHON=${prefix}/bin/python2.6
+                    depends_lib-append port:python26
                 }
 variant     java description {builds java bindings} {
                     configure.args-delete  --without-java
