--- a/dports/php/php5-apc/Portfile
+++ b/dports/php/php5-apc/Portfile
@@ -4,8 +4,8 @@
 PortSystem      1.0
 PortGroup       php5extension 1.0
 
-php5extension.setup apc 3.1.3p1 pecl
-revision        2
+php5extension.setup apc 3.1.4 pecl
+revision        0
 categories      php devel
 platforms       darwin
 maintainers     nox openmaintainer
@@ -17,9 +17,9 @@ long_description \
 
 distname        APC-${version}
 
-checksums       md5     941cf59c3f8042c1d6961b7afb1002b9 \
-                sha1    aed228105250f7d7f1deb57abb2770f1e19c2e49 \
-                rmd160  b7d359b68697adc8a7fe06c41ddaf804a55c911d
+checksums       md5     1f7a58f850e795b0958a3f99ae8c2cc4 \
+                sha1    53d8442e8b7e3804537d14e5776962cfdc5ae4d8 \
+                rmd160  c02ce7bf05eccfea15ea71178733778c6400a3be
 
 use_parallel_build  yes
 
