Update libmtp and amarok to use libusb-compat instead of libusb-legacy.  Rev bump to make sure the new library is linked into correctly.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71110 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libmtp/Portfile
+++ b/dports/multimedia/libmtp/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                libmtp
 version             1.0.3
+revision            1
 categories          multimedia
 platforms           darwin
 maintainers         ecronin openmaintainer
@@ -17,11 +18,6 @@ checksums           md5     a972869860765476e52f2eba45f2b91e \
                     sha1    3d237dc02e420d9ccb8f2539d2818b2f618eaf5f \
                     rmd160  bbb58f231bc94638fa7200b6c083a9dddd14c0f4
 
-# libmtp hard-wires in the search for the legacy libusb
-# have to include the various paths to the header and library manually
-compiler.cpath        ${prefix}/include/libusb-legacy:${compiler.cpath}
-compiler.library_path ${prefix}/lib/libusb-legacy:${compiler.library_path}
-
-depends_lib         port:libusb-legacy
+depends_lib         port:libusb-compat
 
 livecheck.version   ${name}-${version}
