Tweak to install files and libraries as 'libusb-legacy' instead of just 'libusb'; avoids name conflict with 'libusb-compat' port.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71111 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libusb-legacy/Portfile
+++ b/dports/devel/libusb-legacy/Portfile
@@ -5,10 +5,10 @@ PortSystem          1.0
 
 name                libusb-legacy
 version             0.1.12
-revision            1
+revision            2
 categories          devel
 #license             LGPLv2.1
-maintainers         snc openmaintainer
+maintainers         snc michaelld openmaintainer
 description         Library providing access to USB devices
 long_description    A library originally developed under Linux to give \
                     userland programs an API to access to USB hardware.
@@ -22,20 +22,56 @@ checksums           md5     caf182cbc7565dac0fd72155919672e6 \
                     sha1    599a5168590f66bc6f1f9a299579fd8500614807 \
                     rmd160  63848df717e00fff67ab30ba86a85466370d4e8e
 
-patchfiles          patch-Makefile.in.diff patch-darwin.c.diff patch-configure
+patchfiles          patch-Makefile.in.diff patch-darwin.c.diff
+
+post-patch {
+    # tweak pkg-config install directory & file name
+    reinplace "/pkgconfigdir/s@\\$\{libdir\}@\\$\{prefix\}/lib@g" \
+        ${worksrcpath}/configure
+    reinplace "/Name/s@libusb@libusb-legacy@g" \
+        ${worksrcpath}/libusb.pc.in
+    reinplace "s@-lusb@-lusb-legacy@g" \
+        ${worksrcpath}/libusb.pc.in
+    file rename ${worksrcpath}/libusb.pc.in \
+        ${worksrcpath}/libusb-legacy.pc.in
+    reinplace "s@libusb\.pc@libusb-legacy\.pc@g" \
+        ${worksrcpath}/Makefile.in
+    reinplace "s@libusb\.pc@libusb-legacy\.pc@g" \
+        ${worksrcpath}/configure
+
+    # tweak library build and install name
+    reinplace "s@\\(libusb\[^ \]*\\)_la@\\1-legacy_la@g" \
+        ${worksrcpath}/Makefile.in
+    reinplace "s@\\(libusb\[^ \]*\\)\.la@\\1-legacy\.la@g" \
+        ${worksrcpath}/Makefile.in
+    reinplace "s@-lusb@-lusb-legacy@g" \
+        ${worksrcpath}/Makefile.in
+    reinplace "s@\\(libusb\[^ \]*\\)_la@\\1-legacy_la@g" \
+        ${worksrcpath}/tests/Makefile.in
+    reinplace "s@\\(libusb\[^ \]*\\)\.la@\\1-legacy\.la@g" \
+        ${worksrcpath}/tests/Makefile.in
+
+    # tweak libusb-config binary name
+    reinplace "s@-lusb@-lusb-legacy@g" \
+        ${worksrcpath}/libusb-config.in
+    reinplace "s@libusb-config@libusb-legacy-config@g" \
+        ${worksrcpath}/libusb-config.in
+    file rename ${worksrcpath}/libusb-config.in \
+        ${worksrcpath}/libusb-legacy-config.in
+    reinplace "s@libusb-config@libusb-legacy-config@g" \
+        ${worksrcpath}/Makefile.in
+    reinplace "s@libusb-config@libusb-legacy-config@g" \
+        ${worksrcpath}/configure
+}
 
 configure.args      --disable-build-docs \
                     --libdir=${prefix}/lib/libusb-legacy \
                     --includedir=${prefix}/include/libusb-legacy
+
 post-configure {
     if {[variant_isset universal]} {
         reinplace "s|CC -dynamiclib|CC -dynamiclib ${configure.universal_ldflags}|g" ${worksrcpath}/libtool
     }
-}
-
-post-destroot {
-    file rename ${destroot}${prefix}/bin/libusb-config ${destroot}${prefix}/bin/libusb-legacy-config
-    file rename ${destroot}${prefix}/lib/pkgconfig/libusb.pc ${destroot}${prefix}/lib/pkgconfig/libusb-legacy.pc
 }
 
 livecheck.type      regex
