Update deprecated or integrated GNU Radio ports to reflect this new (as of version 3.3.0) status.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71112 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/gnuradio-pmt/Portfile
+++ b/dports/science/gnuradio-pmt/Portfile
@@ -7,14 +7,16 @@ PortGroup archcheck 1.0
 
 name			gnuradio-pmt
 version			3.2.2
-revision		1
+revision        2
 maintainers		michaelld
 description		PMT component of GNU Radio.
 long_description PMT component of GNU Radio: \
-polymorphic types using C++.
+polymorphic types using C++.  In GNU Radio version 3.3, \
+${name} was moved into gnuradio-gruel.  Please consider \
+using the port 'gnuradio-gruel' instead of this one.
 
 categories		science
-homepage		http://gnuradio.org
+homepage        http://gnuradio.org/
 
 # all GNU Radio components come in a single tarball.
 # Reuse this tarball for each Port
@@ -34,6 +36,10 @@ depends_lib		port:gnuradio-omnithread
 
 archcheck.files lib/libgromnithread.dylib
 
+notes "In GNU Radio version 3.3, \
+${name} was moved into gnuradio-gruel.  Please consider \
+using the port 'gnuradio-gruel' instead of this one."
+
 # version 3.2.2 requires this; next version won't
 patchfiles		patch-configure.diff
 
@@ -52,16 +58,26 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+    configure.env      PYTHON=${prefix}/bin/python2.5
+    depends_lib-append port:python25
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+    configure.env      PYTHON=${prefix}/bin/python2.6
+    depends_lib-append port:python26
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
-	default_variants +python26
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+    configure.env      PYTHON=${prefix}/bin/python2.7
+    depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
+    default_variants +python26
 }
