--- a/dports/science/gnuradio-mblock/Portfile
+++ b/dports/science/gnuradio-mblock/Portfile
@@ -7,16 +7,17 @@ PortGroup archcheck 1.0
 
 name			gnuradio-mblock
 version			3.2.2
-revision		1
+revision        2
 maintainers		michaelld
 description		Message block GNU Radio component.
 long_description Message block GNU Radio component: \
 Message blocks (or m-blocks) are a GNU Radio extension, \
 designed in cooperation with BBN, that allows more natural \
-handling of packet-based data.  Will be removed in 3.3 release.
+handling of packet-based data.  ${name} is deprecated, and \
+will not be updated or maintained past GNU Radio version ${version}.
 
 categories		science
-homepage		http://gnuradio.org
+homepage        http://gnuradio.org/
 
 # all GNU Radio components come in a single tarball.
 # Reuse this tarball for each Port
@@ -35,6 +36,8 @@ checksums		md5		3fedcd64c2f51671cc1417b4c1e06834 \
 depends_lib		port:gnuradio-pmt
 
 archcheck.files lib/libpmt.dylib
+
+notes "${name} is deprecated, and will not be updated or maintained past GNU Radio version ${version}."
 
 # version 3.2.2 requires this; next version won't
 patchfiles		patch-configure.diff
@@ -55,16 +58,26 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+    configure.env      PYTHON=${prefix}/bin/python2.5
+    depends_lib-append port:python25
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+    configure.env      PYTHON=${prefix}/bin/python2.6
+    depends_lib-append port:python26
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
-	default_variants +python26
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+    configure.env      PYTHON=${prefix}/bin/python2.7
+    depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
+    default_variants +python26
 }
