--- a/dports/science/gnuradio-omnithread/Portfile
+++ b/dports/science/gnuradio-omnithread/Portfile
@@ -7,14 +7,15 @@ PortGroup archcheck 1.0
 
 name			gnuradio-omnithread
 version			3.2.2
-revision		1
+revision        2
 maintainers		michaelld
 description		Omnithread component of GNU Radio.
 long_description Omnithread component of GNU Radio: \
-a cross-platform C++ thread library.
+a cross-platform C++ thread library. ${name} is deprecated, and \
+will not be updated or maintained past GNU Radio version ${version}.
 
 categories		science
-homepage		http://gnuradio.org
+homepage        http://gnuradio.org/
 
 # all GNU Radio components come in a single tarball.
 # Reuse this tarball for each Port
@@ -30,13 +31,30 @@ checksums		md5		3fedcd64c2f51671cc1417b4c1e06834 \
 				sha1	6177d13e42937383e622edadc0b9f06391d0e5fc \
 				rmd160	42d1a496400ebc77e054f59d9f33cc8ba24a4234
 
-# omnithread doesn't actually require gruel, but it does have all of
-# the same dependencies since it uses the same configure script;
-# hence, just make it dependent for simplicity, for now.
+# gromnithread gets built by the main configure script, which requires
+# a whole slew of ports, included here and then making all other
+# remaining GNU Radio 3.2.2 ports dependent on this one.
 
-depends_lib		port:gnuradio-gruel
+depends_build   port:gawk \
+                port:guile \
+                port:libtool \
+                port:pkgconfig \
+                port:swig-python
 
-archcheck.files lib/libgruel.dylib
+depends_lib     port:boost \
+                port:cppunit \
+                port:fftw-3-single \
+                port:gsl \
+                port:zlib
+
+archcheck.files lib/libboost_thread-mt.dylib \
+                lib/libcppunit.dylib \
+                lib/libfftw3f.dylib \
+                lib/libgsl.dylib \
+                lib/libz.dylib
+
+notes "${name} is deprecated, and will not be updated \
+or maintained past GNU Radio version ${version}."
 
 # version 3.2.2 requires this; next version won't
 patchfiles		patch-configure.diff
@@ -55,16 +73,26 @@ if { ![variant_isset docs] } {
 	configure.args-append --disable-doxygen --disable-docs
 }
 
-variant python25 conflicts python26 description "Use Python 2.5" {
-	configure.env PYTHON=${prefix}/bin/python2.5
-	depends_lib-append	port:python25
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+    configure.env      PYTHON=${prefix}/bin/python2.5
+    depends_lib-append port:python25
 }
 
-variant python26 conflicts python25 description "Use Python 2.6" {
-	configure.env PYTHON=${prefix}/bin/python2.6
-	depends_lib-append	port:python26
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+    configure.env      PYTHON=${prefix}/bin/python2.6
+    depends_lib-append port:python26
 }
 
-if { ![variant_isset python25] && ![variant_isset python26] } {
-	default_variants +python26
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+    configure.env      PYTHON=${prefix}/bin/python2.7
+    depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
+    default_variants +python26
 }
