ghostscript:  - Add a dependency on libidn.  - Remove a dependency on cairo. (devcairo has been removed in gs9)  - Install some additional documents.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71113 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -6,6 +6,7 @@ PortGroup       muniversal 1.0
 name            ghostscript
 version         9.00
 set version_sub rc1
+revision        1
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -24,7 +25,8 @@ distfiles       ${distname}${version_sub}.tar.gz:source \
                 mappingresources4pdf_2unicode-20091208.tar.Z:misc \
                 mappingresources4pdf_other-20091208.tar.Z:misc
 patchfiles      patch-base_unix-dll.mak.diff \
-                patch-base_stdpre.h.diff
+                patch-base_stdpre.h.diff \
+                patch-base_unixinst.mak.diff
 checksums       ${distname}${version_sub}.tar.gz rmd160 5ed89f680b7f5faa2b5fe207a87ee62a41a79581 \
                 ghostscript-fonts-other-6.0.tar.gz rmd160 ab60dbf71e7d91283a106c3df381cadfe173082f \
                 mappingresources4pdf_2unicode-20091208.tar.Z rmd160 bc1b86e6a5f0e022f88070195eb3e01e167114a7 \
@@ -32,11 +34,11 @@ checksums       ${distname}${version_sub}.tar.gz rmd160 5ed89f680b7f5faa2b5fe207
 
 depends_lib     port:xorg-libXext \
                 port:xorg-libXt \
-                path:lib/pkgconfig/cairo.pc:cairo \
                 port:expat \
                 port:fontconfig \
                 port:jpeg \
                 port:libiconv \
+                port:libidn \
                 port:libpaper \
                 port:libpng \
                 port:tiff \
